2011-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* ColorPickers/GSStandardColorPicker.m
	* Source/GSToolbarCustomizationPalette.m
	* Source/GSServicesManager.m
	* Source/NSSpellChecker.m: Fix dead initialisation found by static
	analyser.

2011-03-10 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFConsumer.m
	* Source/GSNibLoading.m
	* Source/NSInputManager.m
	* Source/NSEPSImageRep.m
	* Model/GMArchiver.m
	* Tools/set_show_service.m
	* Tools/GSspell.m: Fix memory leaks found by static analyser.

2011-03-10 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTitleView.h,
	* Headers/AppKit/NSProgressIndicator.h: Remove unused ivars found
	by static analyser.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m (-dealloc): Stop observing
	notifications from the button's menu to prevent obscure crashes
	later.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMatrix.m (_altModifier:): Fix swapped macro arguments,
	which could lead to a wrong selection and potentially a crash when
	extending the selection with the alt modifier key.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTableHeaderCell.m (-initTextCell:): Don't wrap text in
	table view headers by default. This partially fixes #30020.

2011-03-08  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSLayoutManager.m: Implement temporary attributes
	* Header/AppKit/NSLayoutManager.h: Add a _temporaryAttributes ivar

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGraphicsContext.m (+saveGraphicsState): Release the
	stack, as it is retained in the thread dictionary.
	Leak found by static code analyser.

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* gui/Headers/Additions/GNUstepGUI/GSDisplayServer.h
	* gui/Source/GSDisplayServer.m
	* gui/Source/NSCursor.m: Change the way the image for the cursor
	gets passed on to the backend. The old way could only work for 8
	bit data.

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>
